dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(gtkmm_simple_entry, 1.0)


AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE()

AC_PROG_CXX

PKG_CHECK_MODULES([GTKMM], [gtkmm-3.0])

AC_CONFIG_FILES(Makefile src/Makefile src/entry_completion/Makefile src/entry_icon/Makefile src/entry_progress/Makefile)
AC_OUTPUT

