bin_PROGRAMS=gtkmm_simple simple simple_window
gtkmm_simple_SOURCES=gtkmm_simple.cpp

gtkmm_simple_CPPFLAGS = $(GTKMM_CFLAGS)
gtkmm_simple_LDADD = $(GTKMM_LIBS)

simple_SOURCES=simple.cpp
simple_CPPFLAGS = $(GTKMM_CFLAGS)
simple_LDADD = $(GTKMM_LIBS)

simple_window_SOURCES=simple_window.cpp main.cpp
simple_window_CPPFLAGS = $(GTKMM_CFLAGS)
simple_window_LDADD = $(GTKMM_LIBS)